--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,8 +19,8 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - drawsvg
-    - matplotlib-base
+    - drawsvg <2.0
+    - matplotlib-base <3.9
     - python >=3.6
 
 test:
